tests/tests/neg/error_messages/resolver/glob_import.rs
// test that we don't import private items from a glob import

mod a {
    struct S {}
}

use a::*;

#[flux::sig(fn(x: S))] //~ERROR cannot resolve type `S` in this scope
fn foo(x: i32) {}
